fix grid view heigh on mobile ver

--- a/src/Components/GridView/grid-view.module.scss
+++ b/src/Components/GridView/grid-view.module.scss
@@ -10,7 +10,7 @@
   animation: fade-up 500ms ease-in-out;
 
   @media screen and (min-width: breakpoint.$sm) {
-    min-height: 954px;
+    min-height: 380px;
 
     flex-direction: row;
     flex-wrap: wrap;
@@ -21,10 +21,10 @@
 .grid-item {
   position: relative;
   min-height: 337px;
+  flex: 1 0 38rem;
+
   animation: fade-in 500ms forwards ease-in-out;
-  @media screen and (min-width: (breakpoint.$sm)) {
-    flex: 1 0 38rem;
-  }
+
   @media screen and (min-width: (breakpoint.$xl)) {
     max-width: 423px;
   }
@@ -47,6 +47,8 @@
     height: 100%;
     z-index: 2;
     display: none;
+    border: 1px solid #ddd;
+
     .icon {
       cursor: pointer;
       width: 100px;
@@ -77,11 +79,11 @@
       padding: 1rem;
     }
   }
+
   .img {
     transition: filter 300ms ease;
     width: 100%;
     height: 100%;
-    object-fit: cover;
   }
 }
 
